--- a/05. Transfer Learning with TensorFlow Part 2 Fine-tuning.ipynb
+++ b/05. Transfer Learning with TensorFlow Part 2 Fine-tuning.ipynb
@@ -24,13 +24,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the TensorBoard notebook extension\n",
-    "%load_ext tensorboard"
+    "# # Load the TensorBoard notebook extension\n",
+    "# %load_ext tensorboard"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,41 +60,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 2 directories and 0 images in '10_food_classes_10_percent'.\n",
-      "There are 10 directories and 0 images in '10_food_classes_10_percent\\test'.\n",
-      "There are 0 directories and 250 images in '10_food_classes_10_percent\\test\\chicken_curry'.\n",
-      "There are 0 directories and 250 images in '10_food_classes_10_percent\\test\\chicken_wings'.\n",
-      "There are 0 directories and 250 images in '10_food_classes_10_percent\\test\\fried_rice'.\n",
-      "There are 0 directories and 250 images in '10_food_classes_10_percent\\test\\grilled_salmon'.\n",
-      "There are 0 directories and 250 images in '10_food_classes_10_percent\\test\\hamburger'.\n",
-      "There are 0 directories and 250 images in '10_food_classes_10_percent\\test\\ice_cream'.\n",
-      "There are 0 directories and 250 images in '10_food_classes_10_percent\\test\\pizza'.\n",
-      "There are 0 directories and 250 images in '10_food_classes_10_percent\\test\\ramen'.\n",
-      "There are 0 directories and 250 images in '10_food_classes_10_percent\\test\\steak'.\n",
-      "There are 0 directories and 250 images in '10_food_classes_10_percent\\test\\sushi'.\n",
-      "There are 10 directories and 0 images in '10_food_classes_10_percent\\train'.\n",
-      "There are 0 directories and 75 images in '10_food_classes_10_percent\\train\\chicken_curry'.\n",
-      "There are 0 directories and 75 images in '10_food_classes_10_percent\\train\\chicken_wings'.\n",
-      "There are 0 directories and 75 images in '10_food_classes_10_percent\\train\\fried_rice'.\n",
-      "There are 0 directories and 75 images in '10_food_classes_10_percent\\train\\grilled_salmon'.\n",
-      "There are 0 directories and 75 images in '10_food_classes_10_percent\\train\\hamburger'.\n",
-      "There are 0 directories and 75 images in '10_food_classes_10_percent\\train\\ice_cream'.\n",
-      "There are 0 directories and 75 images in '10_food_classes_10_percent\\train\\pizza'.\n",
-      "There are 0 directories and 75 images in '10_food_classes_10_percent\\train\\ramen'.\n",
-      "There are 0 directories and 75 images in '10_food_classes_10_percent\\train\\steak'.\n",
-      "There are 0 directories and 75 images in '10_food_classes_10_percent\\train\\sushi'.\n"
+      "There are 2 directories and 0 images in 'dataset'.\n",
+      "There are 3 directories and 0 images in 'dataset\\test'.\n",
+      "There are 0 directories and 30 images in 'dataset\\test\\guava'.\n",
+      "There are 0 directories and 30 images in 'dataset\\test\\mango'.\n",
+      "There are 0 directories and 33 images in 'dataset\\test\\tulsi'.\n",
+      "There are 3 directories and 0 images in 'dataset\\train'.\n",
+      "There are 0 directories and 150 images in 'dataset\\train\\guava'.\n",
+      "There are 0 directories and 150 images in 'dataset\\train\\mango'.\n",
+      "There are 0 directories and 150 images in 'dataset\\train\\tulsi'.\n"
      ]
     }
    ],
    "source": [
-    "walk_through_dir(\"10_food_classes_10_percent\")"
+    "walk_through_dir(\"dataset\")"
    ]
   },
   {
@@ -104,7 +90,7 @@
    "outputs": [],
    "source": [
     "# Create training and test directories\n",
-    "train_dir = \"10_food_classes_10_percent/train/\"\n",
+    "train_dir = \"dataset/train/\"\n",
     "test_dir = \"10_food_classes_10_percent/test/\""
    ]
   },
