--- a/plantify.ipynb
+++ b/plantify.ipynb
@@ -21,8 +21,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Notebook last run (end-to-end): <class 'datetime.datetime'>\n",
             "TensorFlow version: 2.15.0\n"
@@ -42,6 +42,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {
+        "id": "dbeyN5eTjb_l"
+      },
+      "outputs": [],
       "source": [
         "def walk_through_dir(dir_path):\n",
         "  \"\"\"\n",
@@ -58,33 +63,33 @@
         "  \"\"\"\n",
         "  for dirpath, dirnames, filenames in os.walk(dir_path):\n",
         "    print(f\"There are {len(dirnames)} directories and {len(filenames)} images in '{dirpath}'.\")"
-      ],
-      "metadata": {
-        "id": "dbeyN5eTjb_l"
-      },
-      "execution_count": 23,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "walk_through_dir(\"/content/plant_dataset.rar\")"
-      ],
+      "execution_count": 26,
       "metadata": {
         "id": "N0XyTCPvopku"
       },
-      "execution_count": 26,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "walk_through_dir(\"/content/plant_dataset.rar\")"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [],
       "metadata": {
         "id": "rtJeEsSZyVZw"
-      }
+      },
+      "source": []
     },
     {
       "cell_type": "code",
+      "execution_count": 30,
+      "metadata": {
+        "id": "EqNwQnYKj2Z0"
+      },
+      "outputs": [],
       "source": [
         "import zipfile\n",
         "\n",
@@ -100,41 +105,36 @@
         "    with zipfile.ZipFile(filename, 'r') as zip_ref:\n",
         "        zip_ref.extractall(extract_to)\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "EqNwQnYKj2Z0"
-      },
-      "execution_count": 30,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 32,
+      "metadata": {
+        "id": "eTM5HXyU1uYF"
+      },
+      "outputs": [],
       "source": [
         "\n",
         "# Example usage:\n",
         "zip_file = \"plant_dataset.zip\"\n",
         "unzip_data(zip_file, \"extracted_data\")  # Extracts to the \"extracted_data\" directory"
-      ],
-      "metadata": {
-        "id": "eTM5HXyU1uYF"
-      },
-      "execution_count": 32,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 33,
       "metadata": {
-        "id": "r4SZxcdyHMtU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "r4SZxcdyHMtU",
         "outputId": "58452b4e-e700-4631-ecb3-74a88ad4f627"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "There are 2 directories and 0 images in '/content/extracted_data/plant_dataset'.\n",
             "There are 3 directories and 0 images in '/content/extracted_data/plant_dataset/train'.\n",
@@ -160,16 +160,16 @@
       "cell_type": "code",
       "execution_count": 34,
       "metadata": {
-        "id": "gdgTvBXCHMtU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "gdgTvBXCHMtU",
         "outputId": "034bbc07-3d2b-450f-a6f1-f23ebd81d02f"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Found 449 files belonging to 3 classes.\n",
             "Found 93 files belonging to 3 classes.\n",
@@ -516,14 +516,14 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "<_TakeDataset element_spec=(TensorSpec(shape=(None, 224, 224, 3), dtype=tf.float32, name=None), TensorSpec(shape=(None, 3), dtype=tf.float32, name=None))>"
             ]
           },
+          "execution_count": 34,
           "metadata": {},
-          "execution_count": 34
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -547,16 +547,16 @@
       "cell_type": "code",
       "execution_count": 35,
       "metadata": {
-        "id": "qEy9dW1IHMtU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "qEy9dW1IHMtU",
         "outputId": "13d395db-b350-47ed-e1ad-b640d629b698"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/efficientnet_v2/efficientnetv2-b0_notop.h5\n",
             "24274472/24274472 [==============================] - 0s 0us/step\n"
@@ -577,6 +577,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 36,
+      "metadata": {
+        "id": "BYXv89cx2SnO"
+      },
+      "outputs": [],
       "source": [
         "\n",
         "def create_tensorboard_callback(dir_name, experiment_name):\n",
@@ -596,15 +601,39 @@
         "  )\n",
         "  print(f\"Saving TensorBoard log files to: {log_dir}\")\n",
         "  return tensorboard_callback\n"
-      ],
-      "metadata": {
-        "id": "BYXv89cx2SnO"
-      },
-      "execution_count": 36,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 37,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ib3QLCh1g2In",
+        "outputId": "c734b3bb-de94-4e5f-d212-b9e132d7e43e"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Shape after base_model: (None, 7, 7, 1280)\n",
+            "After GlobalAveragePooling2D(): (None, 1280)\n",
+            "Saving TensorBoard log files to: transfer_learning/10_percent_feature_extract/20240319-175408\n",
+            "Epoch 1/5\n",
+            "15/15 [==============================] - 47s 2s/step - loss: 0.6177 - accuracy: 0.8174 - val_loss: 0.2372 - val_accuracy: 1.0000\n",
+            "Epoch 2/5\n",
+            "15/15 [==============================] - 30s 2s/step - loss: 0.1609 - accuracy: 0.9978 - val_loss: 0.0891 - val_accuracy: 1.0000\n",
+            "Epoch 3/5\n",
+            "15/15 [==============================] - 32s 2s/step - loss: 0.0724 - accuracy: 1.0000 - val_loss: 0.0512 - val_accuracy: 1.0000\n",
+            "Epoch 4/5\n",
+            "15/15 [==============================] - 30s 2s/step - loss: 0.0454 - accuracy: 1.0000 - val_loss: 0.0333 - val_accuracy: 1.0000\n",
+            "Epoch 5/5\n",
+            "15/15 [==============================] - 34s 2s/step - loss: 0.0327 - accuracy: 1.0000 - val_loss: 0.0261 - val_accuracy: 1.0000\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "# 3. Create inputs into the base model\n",
@@ -642,83 +671,256 @@
         "                                 validation_steps=int(0.25 * len(train_data_leaves)),\n",
         "                                 # Track our model's training logs for visualization later\n",
         "                                 callbacks=[create_tensorboard_callback(\"transfer_learning\", \"10_percent_feature_extract\")])"
-      ],
-      "metadata": {
-        "id": "Ib3QLCh1g2In",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c734b3bb-de94-4e5f-d212-b9e132d7e43e"
-      },
-      "execution_count": 37,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Shape after base_model: (None, 7, 7, 1280)\n",
-            "After GlobalAveragePooling2D(): (None, 1280)\n",
-            "Saving TensorBoard log files to: transfer_learning/10_percent_feature_extract/20240319-175408\n",
-            "Epoch 1/5\n",
-            "15/15 [==============================] - 47s 2s/step - loss: 0.6177 - accuracy: 0.8174 - val_loss: 0.2372 - val_accuracy: 1.0000\n",
-            "Epoch 2/5\n",
-            "15/15 [==============================] - 30s 2s/step - loss: 0.1609 - accuracy: 0.9978 - val_loss: 0.0891 - val_accuracy: 1.0000\n",
-            "Epoch 3/5\n",
-            "15/15 [==============================] - 32s 2s/step - loss: 0.0724 - accuracy: 1.0000 - val_loss: 0.0512 - val_accuracy: 1.0000\n",
-            "Epoch 4/5\n",
-            "15/15 [==============================] - 30s 2s/step - loss: 0.0454 - accuracy: 1.0000 - val_loss: 0.0333 - val_accuracy: 1.0000\n",
-            "Epoch 5/5\n",
-            "15/15 [==============================] - 34s 2s/step - loss: 0.0327 - accuracy: 1.0000 - val_loss: 0.0261 - val_accuracy: 1.0000\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 39,
+      "metadata": {
+        "id": "0dNXfDLa41sl"
+      },
+      "outputs": [],
       "source": [
         "converter = tf.lite.TFLiteConverter.from_keras_model(model_0)\n",
         "tflite_model = converter.convert()\n",
         "\n",
         "with open(\"model.tflite\", 'wb') as f:\n",
         "  f.write(tflite_model)"
-      ],
-      "metadata": {
-        "id": "0dNXfDLa41sl"
-      },
-      "execution_count": 39,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "model_0.evaluate(test_data_leaves)"
-      ],
+      "execution_count": 41,
       "metadata": {
-        "id": "kudkNeZ41BlE",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "kudkNeZ41BlE",
         "outputId": "295a29d9-8250-4504-f7c0-aa2e2b8594e5"
       },
-      "execution_count": 41,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "3/3 [==============================] - 5s 2s/step - loss: 0.0831 - accuracy: 1.0000\n"
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[0.08309602737426758, 1.0]"
             ]
           },
+          "execution_count": 41,
           "metadata": {},
-          "execution_count": 41
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "model_0.evaluate(test_data_leaves)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Error: {\n",
+            "    \"error\": \"Malformed request: POST /v1/models/plant_model/1:predict\"\n",
+            "}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# import numpy as np\n",
+        "# import requests\n",
+        "# from PIL import Image\n",
+        "\n",
+        "# # Read the image file\n",
+        "# image_path = \"D:\\\\CODDING\\\\GITHUB\\\\EES\\\\dataset\\\\mangodataset\\\\Gall Midge\\\\IMG_20211106_162102 (Custom).jpg\"\n",
+        "# image = Image.open(image_path)\n",
+        "\n",
+        "# # Resize the image to the required dimensions\n",
+        "# target_size = (224, 224)\n",
+        "# resized_image = image.resize(target_size)\n",
+        "\n",
+        "# # Convert the image to a numpy array of floating-point numbers\n",
+        "# image_array = np.array(resized_image, dtype=np.float32)\n",
+        "\n",
+        "# # Normalize the pixel values (optional)\n",
+        "# image_array /= 255.0\n",
+        "\n",
+        "# # Add a batch dimension\n",
+        "# input_data = np.expand_dims(image_array, axis=0)\n",
+        "\n",
+        "# # Prepare the input data in the required format (e.g., JSON)\n",
+        "# input_json = {\n",
+        "#     \"instances\": input_data.tolist()\n",
+        "# }\n",
+        "\n",
+        "# # URL for the TensorFlow Serving REST API\n",
+        "# api_url = \"http://localhost:8601/v1/models/plant_model/1:predict\"\n",
+        "\n",
+        "# # Send the POST request to the TensorFlow Serving API\n",
+        "# response = requests.post(api_url, json=input_json)\n",
+        "\n",
+        "# # Check if the request was successful\n",
+        "# if response.status_code == 200:\n",
+        "#     # Get the predictions\n",
+        "#     predictions = response.json()\n",
+        "\n",
+        "#     # Print the predictions\n",
+        "#     print(predictions)\n",
+        "# else:\n",
+        "#     print(\"Error:\", response.text)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:From c:\\Users\\LENOVO\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "import tensorflow as tf"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:From c:\\Users\\LENOVO\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\saving\\legacy\\saved_model\\load.py:107: The name tf.gfile.Exists is deprecated. Please use tf.io.gfile.exists instead.\n",
+            "\n",
+            "WARNING:tensorflow:From c:\\Users\\LENOVO\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\engine\\functional.py:156: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+            "\n",
+            "WARNING:tensorflow:From c:\\Users\\LENOVO\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\layers\\normalization\\batch_normalization.py:979: The name tf.nn.fused_batch_norm is deprecated. Please use tf.compat.v1.nn.fused_batch_norm instead.\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Path to the saved model directory\n",
+        "model_path = r'D:\\CODDING\\GITHUB\\EES\\plantify\\saved_model\\1'\n",
+        "\n",
+        "# Load the model\n",
+        "model = tf.keras.models.load_model(model_path)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1/1 [==============================] - 0s 64ms/step\n"
+          ]
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "from keras.preprocessing import image\n",
+        "test_image = image.load_img('D:\\CODDING\\GITHUB\\EES\\dataset\\guava dataset\\Guava Dataset (Original Image)\\Disease Free\\Disease Free (7).jpg', target_size = (224, 224))\n",
+        "test_image = image.img_to_array(test_image)\n",
+        "test_image = np.expand_dims(test_image, axis = 0)\n",
+        "result = model.predict(test_image)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[0.96581906, 0.01451117, 0.01966973]], dtype=float32)"
+            ]
+          },
+          "execution_count": 7,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "result"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'predictions': [[0.0546299294, 0.705981195, 0.239388928]]}\n"
+          ]
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "import requests\n",
+        "from PIL import Image\n",
+        "\n",
+        "# Read the image file\n",
+        "image_path = \"D:\\CODDING\\GITHUB\\EES\\dataset\\guava dataset\\Guava Dataset (Original Image)\\Disease Free\\Disease Free (7).jpg\"\n",
+        "image = Image.open(image_path)\n",
+        "\n",
+        "# Resize the image to the required dimensions\n",
+        "target_size = (224, 224)\n",
+        "resized_image = image.resize(target_size)\n",
+        "\n",
+        "# Convert the image to a numpy array of floating-point numbers\n",
+        "image_array = np.array(resized_image, dtype=np.float32)\n",
+        "\n",
+        "# Normalize the pixel values (optional)\n",
+        "image_array /= 255.0\n",
+        "\n",
+        "# Add a batch dimension\n",
+        "input_data = np.expand_dims(image_array, axis=0)\n",
+        "\n",
+        "# Prepare the input data in the required format (e.g., JSON)\n",
+        "input_json = {\n",
+        "    \"instances\": input_data.tolist()\n",
+        "}\n",
+        "# http://localhost:8501/v1/models/plant_model/versions/1:predict\n",
+        "# URL for the TensorFlow Serving REST API\n",
+        "api_url = \"http://localhost:8501/v1/models/plant_model/versions/1:predict\"\n",
+        "\n",
+        "# Send the POST request to the TensorFlow Serving API\n",
+        "response = requests.post(api_url, json=input_json)\n",
+        "\n",
+        "# Check if the request was successful\n",
+        "if response.status_code == 200:\n",
+        "    # Get the predictions\n",
+        "    predictions = response.json()\n",
+        "\n",
+        "    # Print the predictions\n",
+        "    print(predictions)\n",
+        "else:\n",
+        "    print(\"Error:\", response.text)\n"
       ]
     }
   ],
@@ -762,7 +964,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.13"
+      "version": "3.11.5"
     }
   },
   "nbformat": 4,
